--- a/package.json
+++ b/package.json
@@ -10,14 +10,31 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@firebase/messaging": "^0.7.3",
+    "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^10.0.0",
+    "@react-native-firebase/messaging": "^10.0.0",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "appcenter": "4.0.0",
+    "appcenter-analytics": "4.0.0",
+    "appcenter-crashes": "4.0.0",
+    "i18n-js": "^3.8.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-screens": "~2.2.0",
+    "react-native-camera": "^3.40.0",
+    "react-native-geocoder": "^0.5.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.2.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "^0.11.7",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
@@ -26,11 +43,8 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.1",
     "eslint": "^7.12.1",
-    "jest": "^26.6.1",
+    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.63.0",
     "react-test-renderer": "16.13.1"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
